snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.1-SNAPSHOT/error-0.1.1-20210823.130037-1.pom.md5
2d8c4e95c3fa5ecf8ff0df2b43161e7b